[refactor] 페이징 처리 적용, 카테고리와 국내/국외 적용하여 필터링 추가